# AUVControlBoard

./: .gitignore  404.html  README.md  TODO.md  changeversion.sh  flight_controller_math_6dof_matrix.py  index.html  package.sh  search.html  sitemap.xml
firmware/: .gitignore  CMakeLists.txt  CMakePresets.json  ControlBoard.atstart  README.md  TODO.txt  flash.py  import_atmel_start_proj.py  import_from_generator.py  pccomm_test.py  platformio.ini  read_debug.py  reboot_bootloader.py  samd51g19a_flash.ld  update_from_generators.py
firmware/details/: index.html
firmware/developing/: index.html
firmware/disable_code/include/usb_lib/: LICENSE  readme.txt  usb.h
firmware/generator_projects/: README.txt
firmware/generator_projects/ControlBoard_v1/: .gitignore  ControlBoard_v1.atstart
firmware/generator_projects/ControlBoard_v1/firmware/ControlBoard_v1/: ControlBoard_v1.mc3
firmware/generator_projects/ControlBoard_v1/supplemental/: libc_syscalls.c  samd51g19a_flash.ld
firmware/generator_projects/ControlBoard_v2/: .gitignore  ControlBoard_v2.ioc
firmware/generator_projects/ControlBoard_v2/supplemental/: STM32F411CEUx_FLASH.ld  libc_syscalls.c
firmware/generator_projects/ControlBoard_v2/supplemental/emueeprom/: MODIFICATIONS.txt
firmware/include/: FreeRTOSConfig.h  angles.h  app.h  atmel_start_pins.h  bno055.h  calibration.h  circular_buffer.h  clocks.h  cmdctrl.h  conversions.h  debug.h  delay.h  depth.h  driver_init.h  eeprom.h  flags.h  framework.h  i2c.h  i2c0.h  imu.h  init.h  led.h  matrix.h  metadata.h  motor_control.h  motor_pwm.h  ms5837.h  pccomm.h  pid.h  ports.h  simulator.h  threads.h  thruster.h  timers.h  tusb_config.h  tusb_wrapper.h  usb.h  usbuart.h  util.h
firmware/include/asf4/config/: hpl_gclk_config.h  hpl_oscctrl_config.h  hpl_sercom_config.h  hpl_tc_config.h  peripheral_clk_config.h
firmware/include/asf4/hpl/: i2c_lite.h  tcc_lite.h
firmware/include/ats/: atmel_start_pins.h  driver_init.h
firmware/include/hardware/: eeprom.h  i2c.h  thruster.h  usb.h  wdt.h
firmware/include/sensor/: bno055.h  ms5837.h
firmware/include/simcb/: FreeRTOSConfig.h  tusb_config.h
firmware/include/usb_lib/class/dfu/: dfu.h
firmware/include/usb_lib/samd/: usb_samd.h
firmware/include/util/: angles.h  circular_buffer.h  conversions.h  matrix.h  pid.h
firmware/include/v1/: FreeRTOSConfig.h  tusb_config.h
firmware/include/v1_generated/: atmel_start.h  atmel_start_pins.h  hpl_includes.txt
firmware/include/v1_generated/config/: hpl_gclk_config.h  hpl_oscctrl_config.h  peripheral_clk_config.h
firmware/include/v1_generated/mcc_harmony/: definitions.h  device.h  device_vectors.h  interrupts.h
firmware/include/v1_generated/mcc_harmony/peripheral/: plib_port.h
firmware/include/v2/: FreeRTOSConfig.h  st_eeprom.h  tusb_config.h
firmware/include/v2_generated/Core/: stm32cubemx_main.h
firmware/lib/asf4/: library.json
firmware/lib/asf4/include/: hpl_tcc_config.h  peripheral_clk_config.h
firmware/lib/asf4/src/: hpl_tcc.c
firmware/lib/cmsis/: library.json  readme.txt
firmware/lib/cmsis-samd51/: library.json
firmware/lib/samd51/: library.json
firmware/lib/samd51_dfp/: library.json  readme.txt
firmware/lib/samd51a/: library.json
firmware/lib/tinyusb/: README.txt  fixlib.py  library.json
firmware/lib/tinyusb/include/: tusb.h  tusb_option.h
firmware/lib/tinyusb/include/common/: tusb_common.h  tusb_fifo.h  tusb_types.h  tusb_verify.h
firmware/lib/tinyusb/include/device/: dcd.h  usbd.h  usbd_pvt.h
firmware/lib/tinyusb/include/host/: hcd.h  hub.h  usbh.h  usbh_classdriver.h
firmware/lib/tinyusb/include/osal/: osal.h  osal_mynewt.h  osal_none.h  osal_pico.h  osal_rtthread.h
firmware/lib/tinyusb/src/: tusb.c
firmware/lib/tinyusb/src/common/: tusb_fifo.c
firmware/lib/tinyusb/src/device/: usbd.c  usbd_control.c
firmware/lib/tinyusb/src/host/: hub.c  usbh.c
firmware/lib/usb/: library.json  readme.txt
firmware/lib/usb/include/samd/: usb_samd.h
firmware/lib/usb/src/samd/: usb_samd.c
firmware/math/: index.html
firmware/math_old/: index.html
firmware/math_res/: accumulate_angles.py  construct_orientation_errors.dia  numpy_motor_math.py  orientation_math.py
firmware/math_test_code/: numpy_motor_math.py
firmware/overview/: index.html
firmware/remote_flash/: flash.py
firmware/simhijack/: index.html
firmware/src/: angles.c  app.c  bno055.c  calibration.c  circular_buffer.c  clocks.c  cmdctrl.c  conversions.c  debug.c  delay.c  depth.c  dotstar.c  driver_init.c  freertos.c  freertos_hook.c  i2c0.c  i2c_common.c  imu.c  irq_handlers.c  led.c  main.c  matrix.c  motor_control.c  motor_pwm.c  ms5837.c  pccomm.c  pid.c  ports.c  simulator.c  startup_samd51g19a.c  system_samd51g19a.c  threads.c  timers.c  usb.c  usb_descriptors.c  usbuart.c  util.c
firmware/src/asf4/hal/: hal_timer.c
firmware/src/asf4/hpl/: hpl_init.c  hpl_sercom.c  hpl_tc.c  i2c_lite.c  tcc_lite.c
firmware/src/ats/: driver_init.c
firmware/src/hardware/: delay.c  eeprom.c  i2c.c  irq_handlers.c  led.c  thruster.c  usb.c  usb_descriptors.c  wdt.c
firmware/src/sensor/: bno055.c  ms5837.c
firmware/src/simcb/: eeprom.c  i2c.c  led.c  thruster.c  wdt.c
firmware/src/tinyusb/: readme.txt
firmware/src/tinyusb/portable/samd/: dcd_samd.c
firmware/src/usb_lib/: usb_requests.c
firmware/src/usb_lib/class/dfu/: dfu.c
firmware/src/usb_lib/samd/: usb_samd.c
firmware/src/util/: angles.c  circular_buffer.c  conversions.c  matrix.c  pid.c
firmware/src/v1/: eeprom.c  i2c.c  irq_handlers.c  led.c  thruster.c  usb_descriptors.c  wdt.c
firmware/src/v1_generated/: driver_init.c  system_samd51g19a.c
firmware/src/v1_generated/mcc_harmony/: initialization.c  libc_syscalls.c
firmware/src/v1_generated/mcc_harmony/peripheral/: plib_clock.c  (+2 more)
firmware/src/v2/: eeprom.c  i2c.c  irq_handlers.c  led.c  st_eeprom.c  thruster.c  usb_descriptors.c  wdt.c
firmware/src/v2_generated/Core/: stm32cubemx_main.c  stm32f4xx_hal_timebase_tim.c
firmware/toolchains/: arm-none-eabi.cmake
firmware/tools/debug/: cb_v1_via_cmsisdap.cfg  cb_v2_via_stlink2.cfg  launch.json
(+317 files in other folders)
